feat: cs 학습 전용 관리자 api 구현